문자열 계산기 입력 테스트 함수 구현 - 숫자_판별 - 연산자_판별 - 문자열_입력_2항 - 문자열_입력_실패