@@ -1,6 +1,7 @@
 package org.calculator;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
@@ -8,22 +9,22 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 public class Calculator {
-    final Pattern NUMBER_PATTERN = Pattern.compile("[-+][0-9]+");
-    final Pattern OPERATOR_PATTERN = Pattern.compile("[-+/*]");
+    final Pattern NUMBER_PATTERN = Pattern.compile("^[-+]?[0-9]+$");
+    final Pattern OPERATOR_PATTERN = Pattern.compile("^[-+/*]{1}$");
 
-    private int add(int a, int b) {
+    public int add(int a, int b) {
         return a + b;
     }
-    private int subtract(int a, int b) {
+    public int subtract(int a, int b) {
         return a - b;
     }
-    private int multiply(int a, int b) {
+    public int multiply(int a, int b) {
         return a * b;
     }
-    private int divide(int a, int b) {
+    public int divide(int a, int b) {
         return a / b;
     }
-    private boolean isNumber(String item){
+    public boolean isNumber(String item){
         Matcher matcher = NUMBER_PATTERN.matcher(item);
         if(matcher.matches()){
             return true;
@@ -31,8 +32,8 @@ public class Calculator {
         return false;
     }
 
-    private boolean isOperator(String item){
-        Matcher matcher = NUMBER_PATTERN.matcher(item);
+    public boolean isOperator(String item){
+        Matcher matcher = OPERATOR_PATTERN.matcher(item);
         if(matcher.matches()){
             return true;
         }
@@ -41,12 +42,21 @@ public class Calculator {
 
     Map<String, List<String>> parse(String input){
         String[] split = input.split(" ");
-        List<String> numbers = Arrays.stream(split).filter(this::isNumber).toList();
-        List<String> ops = Arrays.stream(split).filter(this::isOperator).toList();
+        List<String> numbers = Arrays.stream(split)
+                .filter(this::isNumber)
+                .collect(Collectors.toList());
+        List<String> ops = Arrays.stream(split)
+                .filter(this::isOperator)
+                .collect(Collectors.toList());
 
-        Map<String, List<String>> result = null;
+        Map<String, List<String>> result = new HashMap<>();
         result.put("numbers", numbers);
         result.put("ops", ops);
+
+        if (numbers.isEmpty() || ops.isEmpty()){
+            throw new IllegalArgumentException("잘못된 계산식입니다.");
+        }
+
         return result;
     }
 
